# goad

./: .gitignore  404.html  Cargo.toml  README.md  config.toml  et --hard HEAD@{1}  index.html  log  mkdocs.yml  output.txt  perf.data.old  pyproject.toml  setup.sh  sitemap.xml
.github/workflows/: CI.yml  python.yml
blender/: dev.blend  dev.blend1
blender/addon/: __init__.py  operators.py  panel.py
checks/: index.html
config/: default.toml
convergence/: index.html
docs/: about.md  convergence.md  index.md  results.md  settings.md
docs/source/src/python/examples/: convergence.py  data  multiproblem.py  results.py
examples/: clip.rs  clip_test.rs  convergence.rs  diff-debug.rs  diff-test.rs  distortion.rs  multi-problem.rs  problem-diff.rs  problem1.rs  problem2.rs  projection-debug.rs  projection.rs  projection1.rs  projection2.rs  projection_multi.rs  propagate-summation.rs  propagate.rs  remainder.rs  serialize-orientation.rs  simplify.rs  sort.rs  vector_scale.rs
goad-blender/: install_as_zip.sh
goad-blender/addon/: __init__.py  bl_info.py  operators.py  panel.py
goad-py/: 01_simple_asymmetry_results.json  Cargo.toml  DEVELOPMENT_GUIDE.md  backscatter_convergence_example.py  ensemble_example.py  goad_py.pyi  local.toml  log  maturin.sh  monte-carlo.py  multiproblem_example.py  phips_convergence_example.py  phips_ensemble_convergence_example.py  plot.ipynb  pyproject.toml  s11_convergence_example.py  sample.py  test_multiproblem.py
goad-py/.env/: pyvenv.cfg
goad-py/.github/workflows/: CI.yml
goad-py/app/: main.py  main_window.py  opengl_view.py  plot_view.py
goad-py/app/panels/: __init__.py  console_panel.py  control_panel.py  outliner_panel.py  properties_panel.py  simulation_settings_panel.py
goad-py/app/util/: __init__.py  gl_helpers.py
goad-py/python/goad_py/: __init__.py  convergence.py  phips_convergence.py
goad-py/src/: lib.rs
python/goad/: __init__.py  bar.py  convergence.py  goad.pyi
python/goad/convergence/: __init__.py  albedo.py  asymmetry.py  base.py  convergable.py  display.py  ext_cross.py  multiple_targets.py  scat_cross.py
results/: index.html
search/: search_index.json
settings/: index.html
source/src/python/examples/: settings.py
src/: beam.rs  bins.rs  clip.rs  config.rs  containment.rs  convergence.rs  diff.rs  distortion.rs  field.rs  fresnel.rs  geom.rs  helpers.rs  lib.rs  main.rs  multiproblem.rs  orientation.rs  output.rs  params.rs  powers.rs  problem.rs  python.rs  result.rs  settings.rs  snell.rs
src/settings/: cli.rs  constants.rs  loading.rs  validation.rs
tests/: fixed_orientation_tests.rs
