[package]
    name = "goad"
    version = "0.1.0"
    edition = "2021"

[dependencies]
    anyhow = "1.0.95"
    chrono = "0.4.40"
    clap = { version = "4.5.27", features = ["derive"] }
    config = "0.15.7"
    geo = "0.29.3"
    geo-clipper = "0.8.0"
    geo-types = "0.7.14"
    indicatif = "0.17.9"
    itertools = "0.14.0"
    macroquad = "0.4.13"
    nalgebra = { version = "0.33.2", features = ["serde"] }
    ndarray = "0.16.1"
    ndarray-interp = "0.4.1"
    ndarray-stats = "0.6.0"
    num-complex = { version = "0.4.6", features = ["serde"] }
    pyo3 = "0.24.1"
    rand = "0.9.0"
    rand_distr = "0.5.1"
    rayon = "1.10.0"
    serde = { version = "1.0.217", features = ["derive"] }
    serde_json = "1.0.140"
    tobj = "4.0.2"
    toml = "0.8.19"

[workspace]
    members = [
        "goad-py",
    ]
