[project]
name = "goad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.0",
]
license = "GPL-3.0-or-later"
keywords = ["goad"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project.urls]
Homepage = "https://github.com/hballington12/goad"

[tool.maturin]
python-source = "python"
module-name = "goad.goad"
features = ["extension-module"]
